@@ -1,97 +1,97 @@
 #
 ---
-puppet-syntax: 
+puppet-syntax:
   stage: test
-  tags: 
+  tags:
     - docker
   image: ruby:2.1
-  script: 
+  script:
     - bundle install
     - bundle exec rake syntax
-puppet-lint: 
+puppet-lint:
   stage: test
-  tags: 
+  tags:
     - docker
   image: ruby:2.1
-  script: 
+  script:
     - bundle install
     - bundle exec rake lint
-puppet-metadata: 
+puppet-metadata:
   stage: test
-  tags: 
+  tags:
     - docker
   image: ruby:2.1
-  script: 
+  script:
     - bundle install
     - bundle exec rake metadata
 unit-test-ruby-2.1:
   stage: test
-  tags: 
+  tags:
     - docker
   image: ruby:2.1
-  script: 
+  script:
     - bundle install
     - bundle exec rake spec
 unit-test-ruby-2.2:
   stage: test
-  tags: 
+  tags:
     - docker
   image: ruby:2.2
   allow_failure: true
-  script: 
+  script:
     - bundle install
     - bundle exec rake spec
 unit-test-ruby-2.3:
   stage: test
-  tags: 
+  tags:
     - docker
   image: ruby:2.3
   allow_failure: true
-  script: 
+  script:
     - bundle install
     - bundle exec rake spec
 
 # For PE LTS Support
 # See: https://puppet.com/misc/puppet-enterprise-lifecycle
-puppet4.7-syntax: 
+puppet4.7-syntax:
   stage: test
-  tags: 
+  tags:
     - docker
   image: ruby:2.1
-  script: 
+  script:
     - PUPPET_VERSION=4.7 bundle install
     - PUPPET_VERSION=4.7 bundle exec rake syntax
 unit-test-puppet4.7-ruby-2.1:
   stage: test
-  tags: 
+  tags:
     - docker
   image: ruby:2.1
-  script: 
+  script:
     - PUPPET_VERSION=4.7 bundle install
     - PUPPET_VERSION=4.7 bundle exec rake spec
 unit-test-puppet4.7-ruby-2.2:
   stage: test
-  tags: 
+  tags:
     - docker
   image: ruby:2.2
   allow_failure: true
-  script: 
+  script:
     - PUPPET_VERSION=4.7 bundle install
     - PUPPET_VERSION=4.7 bundle exec rake spec
 unit-test-puppet4.7-ruby-2.3:
   stage: test
-  tags: 
+  tags:
     - docker
   image: ruby:2.3
   allow_failure: true
-  script: 
+  script:
     - PUPPET_VERSION=4.7 bundle install
     - PUPPET_VERSION=4.7 bundle exec rake spec
 
-acceptance-test: 
+acceptance-test:
   stage: test
-  tags: 
+  tags:
     - beaker
-  script: 
+  script:
     - bundle install --no-binstubs --path=vendor
-    - bundle exec rake acceptance
+    - bundle exec rake beaker:suites
