@@ -1,6 +1,6 @@
 {
   "name": "simp-useradd",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "SIMP Team",
   "summary": "A SIMP puppet module for managing settings regarding users and user creation",
   "license": "Apache-2.0",
@@ -23,7 +23,7 @@
   "dependencies": [
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.1.0 < 4.0.0"
+      "version_requirement": ">= 3.10.0 < 4.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
