@@ -9,7 +9,7 @@ ENCRYPT_METHOD SHA512
 FAIL_DELAY 4
 FAILLOG_ENAB yes
 GID_MAX 500000
-GID_MIN 500
+GID_MIN 1000
 ISSUE_FILE /etc/issue
 LASTLOG_ENAB yes
 LOG_OK_LOGINS yes
@@ -34,5 +34,6 @@ SU_WHEEL_ONLY no
 SYSLOG_SG_ENAB yes
 SYSLOG_SU_ENAB yes
 UID_MAX 1000000
+UID_MIN 1000
 UMASK 007
 USERGROUPS_ENAB yes
